# youtube_search2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  test_search.py
.github/workflows/: ci-cd.yml  pytest.yml
src/: ytsearch.py
tests/: test_search.py
ytsearch2/: __init__.py
